[tool.poetry]
name = "tcharl.ansible_users"
version = "0.1.0"
description = "Freeipa users and group management"
authors = ["Charlie Mordant <cmordant1@gmail.com>"]
license = "Apache2"
readme = "README.md"
include = ["defaults", "files", "handlers", "meta", "tasks", "templates", "vars"]
packages = [
    {include = "meta/**/*.py"}
]

[tool.poetry.dependencies]
python = ">3.10"
ansible = "^9.1.0"
jmespath = "^1.0.1"
netaddr = "^1.3.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
yamllint = "*"
pytest-testinfra = "*"
molecule-plugins = {version = "*", extras = ["podman"]}
ansible-lint = {version = "^v6.22.1", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
